# modern-python-project

./: .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  requirements_dev.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.md
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  requirements_dev.txt  setup.cfg  setup.py
{{cookiecutter.project_slug}}/docs/: conf.py  index.md  installation.md  usage.md
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
