[metadata]
name = modern_python_project
version = 0.1.0
url = https://github.com/corenel/modern-python-project
license = MIT License
author = Yusu Pan
author_email = xxdsox@gmail.com
maintainer = Yusu Pan
maintainer_email = xxdsox@gmail.com
description = An example for building a modern python project.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores = __init__.py: F401

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[tool:black]
exclude = "{{cookiecutter\.project_slug}}"

[coverage:run]
branch = True
source =
    modern_python_project
    tests

[coverage:paths]
source =
    src
    */site-packages
